--- a/PghTechFest.Www/PghTechFest.Www.csproj
+++ b/PghTechFest.Www/PghTechFest.Www.csproj
@@ -122,8 +122,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\images\dicello-pittsburgh.jpg" />
+    <Content Include="Views\CallForSpeakers\Create.cshtml" />
+    <Content Include="Views\CallForSpeakers\Delete.cshtml" />
+    <Content Include="Views\CallForSpeakers\Details.cshtml" />
+    <Content Include="Views\CallForSpeakers\Edit.cshtml" />
+    <Content Include="Views\CallForSpeakers\Index.cshtml" />
     <None Include="Views\Contact\Index.cshtml" />
-    <Content Include="contact\index.html" />
     <Content Include="Content\css\animate.css" />
     <Content Include="Content\css\bootstrap-theme.min.css" />
     <Content Include="Content\css\bootstrap.css" />
@@ -147,7 +152,6 @@
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\images\author.png" />
-    <Content Include="Content\images\dicello-pittsburgh.jpeg" />
     <Content Include="Content\images\icons\1 %281%29.png" />
     <Content Include="Content\images\icons\1.png" />
     <Content Include="Content\images\icons\10.png" />
@@ -366,9 +370,6 @@
     <None Include="Views\Sessions\Index.cshtml" />
     <Content Include="Content\css\style.css" />
     <None Include="Views\Venue\Index.cshtml" />
-    <Content Include="index.html" />
-    <Content Include="sessions\index.html" />
-    <Content Include="venue\index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -376,6 +377,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\CallForSpeakersController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\Api-PeopleController.cs" />
     <Compile Include="Controllers\Api-ScheduleSlotsController.cs" />
@@ -385,6 +387,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DBContext.cs" />
+    <Compile Include="Models\Domain\Person.cs" />
+    <Compile Include="Models\Domain\ScheduleSlot.cs" />
+    <Compile Include="Models\Domain\Session.cs" />
+    <Compile Include="Models\Domain\Track.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeController.cs" />
   </ItemGroup>
@@ -418,12 +425,6 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\PghTechFest.Components\PghTechFest.Components.csproj">
-      <Project>{1775ef3d-67ed-4a41-8bb9-b833ff944453}</Project>
-      <Name>PghTechFest.Components</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
