--- a/PghTechFest.Www/PghTechFest.Www.csproj
+++ b/PghTechFest.Www/PghTechFest.Www.csproj
@@ -128,7 +128,6 @@
     <Content Include="Views\CallForSpeakers\Details.cshtml" />
     <Content Include="Views\CallForSpeakers\Edit.cshtml" />
     <Content Include="Views\CallForSpeakers\Index.cshtml" />
-    <None Include="Views\Contact\Index.cshtml" />
     <Content Include="Content\css\animate.css" />
     <Content Include="Content\css\bootstrap-theme.min.css" />
     <Content Include="Content\css\bootstrap.css" />
@@ -369,6 +368,7 @@
     <Content Include="Content\rs-plugin\js\jquery.themepunch.tools.min.js" />
     <None Include="Views\Sessions\Index.cshtml" />
     <Content Include="Content\css\style.css" />
+    <Content Include="Views\Sponsors\Index.cshtml" />
     <None Include="Views\Venue\Index.cshtml" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -378,11 +378,11 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CallForSpeakersController.cs" />
-    <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\Api-PeopleController.cs" />
     <Compile Include="Controllers\Api-ScheduleSlotsController.cs" />
     <Compile Include="Controllers\Api-SessionsController.cs" />
     <Compile Include="Controllers\SessionsController.cs" />
+    <Compile Include="Controllers\SponsorsController.cs" />
     <Compile Include="Controllers\VenueController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
