--- a/PghTechFest.Www/Web.config
+++ b/PghTechFest.Www/Web.config
@@ -11,6 +11,7 @@
     <add name="pghtechfest" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS; Database=pghtechfest; Integrated Security=True" />
   </connectionStrings>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
   </system.web>
