Updates config to use azure db convention

--- a/PghTechFest.Www/Web.config
+++ b/PghTechFest.Www/Web.config
@@ -8,7 +8,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="pghtechfest" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS; Database=pghtechfest; Integrated Security=True" />
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS; Database=pghtechfest; Integrated Security=True" />
   </connectionStrings>
   <system.web>
     <customErrors mode="Off"/>
